--- a/css/product.css
+++ b/css/product.css
@@ -1,4 +1,4 @@
-.product{
+.product {
      display: flex;
      flex-direction: column;
      background-color: #fff;
@@ -6,31 +6,46 @@
      align-items: center;
      justify-content: space-between;
      gap: 1em;
-     border-radius: 1em;
+     border-radius: .9em;
 }
-.product-img{
+
+.product-img {
      width: 100%;
      padding: .5em;
 }
-.product-img img{
-     width: 100%;
-}
-.product-title{cursor: pointer;}
 
-.product-details{
+.product-img img {
+     width: 100%;
+}
+
+.product-title {
+     cursor: pointer;
+}
+
+.product-details {
      width: 100%;
      display: flex;
-     padding: 0 1em;
+     padding: 0 .5em;
      justify-content: space-between;
 }
-.product-buttons{
+
+.product-buttons {
      display: flex;
      width: 100%;
-     padding: .5em 1em;
+     padding: .5em 1em .8em 1em;
      justify-content: space-between;
 }
-.product-buttons button{
+
+.product-buttons button {
      font-size: 1.3rem;
      cursor: pointer;
      color: var(--bColor);
+     background: none;
+}
+
+@media screen and (min-width : 1370px) {
+     .product-title,
+     .product-price {
+          font-size: 1.1rem;
+     }
 }
