--- a/css/login.css
+++ b/css/login.css
@@ -1,70 +1,75 @@
-.login-container{
-     font-size: .9rem;
-     top: -10000px;
-     padding: 1em;
+.login-container {
+  font-size: 0.9rem;
+  top: -10000px;
+  padding: 1em;
 }
-.login-container.open{
-     top: -107.7px;
+.login-container.open {
+  top: -107.7px;
 }
-.inputs{
-     padding: .6em;
-     border: 1px solid var(--pColor);
-     border-radius: 1em;
-     display: flex;
-     align-items: center;
-     gap: .5em;
-     background-color: #f5f5f5;
+.inputs {
+  padding: 0.6em;
+  border: 1px solid var(--pColor);
+  border-radius: 1em;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  background-color: #f5f5f5;
 }
-.inputs input{
-     background-color: transparent;
-     width: 100%;
+.inputs input {
+  background-color: transparent;
+  width: 100%;
 }
-.login-button{
-     width: 100%;
-     cursor: pointer;
-     padding: .85em;
-     background-color: #aab4c7;
-     border-radius: 1em;
+
+.errorMessage,
+.warningMessage {
+  padding: 0 0.5em;
+  color: #f12525;
+  display: none;
 }
-.logged-items{
-     display: flex;
-     align-items: center;
-     gap: 1em;
+.login-button {
+  width: 100%;
+  cursor: pointer;
+  padding: 0.85em;
+  background-color: #aab4c7;
+  border-radius: 1em;
 }
-.logged-items span{
-     padding: .3em;
-     background-color: #131313;
-     color: #aab4c7;
-     border-radius: .3em;
-     user-select: none;
+.logged-items {
+  display: flex;
+  align-items: center;
+  gap: 1em;
 }
-.logged-items i{
-     font-size: 1.4rem;
+.logged-items span {
+  padding: 0.3em;
+  background-color: #131313;
+  color: #aab4c7;
+  border-radius: 0.3em;
+  user-select: none;
 }
-.logged-buttons{
-     display: flex;
-     align-items: center;
-     justify-content: space-between;
-     gap: .5em;
+.logged-items i {
+  font-size: 1.4rem;
 }
-.logged-buttons button{
-     cursor: pointer;
-     padding:.5em 1em;
-     border-radius: .5em;
+.logged-button {
+  display: flex;
+  justify-content: end;
 }
-.aside-container.logged{
-     gap: 1.5em;
+.login-container.logged {
+  gap: 1.5em;
 }
-.changePass-button{
-     background-color: #aaaac7;
+.logout-button {
+  cursor: pointer;
+  padding: 0.6em 1.5em;
+  border-radius: 0.5em;
+  color: #131313;
+  background-color: #aaaac7;
 }
-.logout-button{
-     border:1px solid #131313;
-     color: #131313;
-     background-color: transparent;
-}
-@media screen and (min-width : 1000px) {
-     .login-container.open.open{
-          top: -13px;
-     }
+@media screen and (min-width: 1000px) {
+  .login-container.open.open {
+    top: -13px;
+  }
+  .logged-items i {
+    font-size: 1.4rem;
+  }
+  .inputs i {
+    font-size: 1.3rem;
+  }
 }
