--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import url("product.css");
 @import url("cart.css");
 @import url("login.css");
+@import url("footer.css");
 
 * {
   margin: 0;
@@ -55,6 +56,13 @@ main.open-login {
 aside {
   width: 100%;
   position: relative;
+}
+footer{
+  width: 100%;
+  padding: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
   main {
