--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,11 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0px 1px 20px #888888;
+  background-color: white;
 }
 
 main {
@@ -45,7 +50,7 @@ main {
   justify-content: center;
   grid-template-columns: repeat(2, 1fr);
   gap: 2em 1em;
-  padding: 1em 0.5em;
+  padding: 1.25em 0.6em;
   background-color: var(--gColor2);
   transition: 0.3s;
   font-size: 0.9rem;
@@ -54,11 +59,17 @@ main.open-cart,
 main.open-login {
   filter: brightness(60%) blur(3px);
 }
+.not-found-product {
+  padding: 0.5em;
+  min-height: calc(100vh - 259px);
+  font-size: 1.1rem;
+  grid-column: 1/3;
+}
 aside {
   width: 100%;
   position: relative;
 }
-footer{
+footer {
   width: 100%;
   padding: 0.5em;
   display: flex;
@@ -70,6 +81,9 @@ footer{
     grid-template-columns: repeat(3, 1fr);
     gap: 2em 1.5em;
   }
+  .not-found-product{
+    min-height: calc(100vh - 268px);
+  }
 }
 @media screen and (min-width: 1000px) {
   header {
@@ -77,8 +91,11 @@ footer{
   }
   main {
     grid-template-columns: repeat(4, 1fr);
-    padding: 1em 2em;
+    padding: 1.5em 2em;
     gap: 2.5em 2em;
+  }
+  .not-found-product{
+    min-height: calc(100vh - 195px);
   }
 }
 @media screen and (min-width: 1370px) {
@@ -88,5 +105,8 @@ footer{
   main {
     grid-template-columns: repeat(5, 1fr);
     gap: 3em 2.5em;
+  }
+  .not-found-product{
+    font-size: 1.5rem;
   }
 }
